test(upload): pin download destinations and redirects
Archive URL downloads should reach public destinations only, judged by
the addresses a host resolves to, on the named URL and on every redirect.
Redirects are capped and may keep their scheme or move from http to
https. An operator setting admits private ranges for on-premises mirrors,
never loopback, link-local or unspecified addresses.

The loopback download tests move to the policy tests, which permit the
test server's address explicitly.

Refs #139